Fix broken style in dashboard

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -1,3 +1,24 @@
+.dashboard-holder {
+    display: inline-flex;
+    width: 100%;
+}
+
+.dashboard {
+    display: block;
+    width: 98%;
+    margin: 0 1% 0 1%;
+
+    @media only screen and (max-width: 67rem) {
+        width: 65%;
+        margin: 0 2% 5rem 33%;
+    }
+
+    @media only screen and (max-width: 50rem) {
+        width: 95%;
+        margin: 0 auto 5rem auto;
+    }
+}
+
 .dashboard-card-holder {
     width: 100%;
     display: flex;
